[package]
name = "int-seq"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A procedural macro for generating integer sequences"
readme = "README.md"
repository = "https://github.com/atomicapple0/int-seq"
keywords = ["integer", "sequence", "macro"]

[lib]
proc-macro = true

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking"] }
serde_json = "1.0.134"
